--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   teledrive:
-    command: bash -c "export NODE_OPTIONS='--openssl-legacy-provider --no-experimental-fetch' && yarn api prisma migrate deploy || yarn api prisma migrate resolve --applied "20220420012853_init" && node api/dist/index.js"
+    command: bash -c "(yarn api prisma migrate deploy || yarn api prisma migrate resolve --applied 20220420012853_init) && node api/dist/index.js"
     labels:
       traefik.http.routers.server.rule: Host(`teledrive.localhost`)
       traefik.port: 4000
@@ -20,7 +20,7 @@ services:
       DATABASE_URL: postgres://postgres:${DB_PASSWORD}@db:5432/teledrive?connect_timeout=60&pool_timeout=60&socket_timeout=60
       REDIS_URI: redis://redis:6379
     env_file:
-      - .env
+      - stack.env
     depends_on:
       - db
       - redis
@@ -33,7 +33,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: teledrive
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - teledrive_data:/var/lib/postgresql/data
 
   redis:
     image: redis:6
@@ -41,3 +41,8 @@ services:
 
 volumes:
   teledrive_data:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: /var/lib/postgresql/data
